FEAT(account-settings): implemented account settings with custom inputs
